# hello

./: Calculator.cpp  git_avoid_password.txt  git_password.txt  hello.cpp  timer_usage.cpp
AutoTest/: AutoTest.sln
AutoTest/AutoTest/: AutoTest.cpp  AutoTest.vcxproj
AutoTest/BoostXmlFile/: b.xml  boost_xml.cpp
AutoTest/CSVToHtml/: CSV2Html.cpp  CSVToHtml.vcxproj  TestResult.txt  index.html  style.css
CTestSample/: CMakeLists.txt
CTestSample/googletest/: CMakeLists.txt  version.txt
CTestSample/googletest/src/: gtest-death-test.cc
Cmake_sln_sample/: CMakeLists.txt  cmake_help.txt  foo.h  tutorial.cxx  versioninfo.h  versioninfo.h.in
Cmake_sln_sample/AddDLL/: AddDLL.cpp
Cmake_sln_sample/AddLib/: AddLib.cpp  main.cpp
Cmake_sln_sample/AddLib2/: CMakeLists.txt  main.cpp
CppAMP_OpenCL_Solution/: CppAMP.sln
CppAMP_OpenCL_Solution/Convolution_sample/: Convolution.cpp  Convolution_sample.vcxproj
CppAMP_OpenCL_Solution/CppAMP/: AMP.cpp  Convolution.cpp  CppAMP.vcxproj  MatrixMultiply.cpp  MultiOpenCLDev.cpp  MultiOpenCLDev.h  Opencl_Instance.cpp  Opencl_Instance.h  VecAdd.cpp  VecAdd_Compare.cpp  trace_shared.h
CppAMP_OpenCL_Solution/CppAmpTest/: CppAmpTest.vcxproj  amp_sample1.cpp
CppAMP_OpenCL_Solution/OpenCL_Add/: OpenCL_Add.vcxproj  opencl_Add.cpp
FontTessellation/: FontTessellation.sln
FontTessellation/FontTessellation/: FontTessellation.csproj  Program.cs  TesselationDemo.Designer.cs  TesselationDemo.cs  Tessellator.cs  TextToMesh.Designer.cs  TextToMesh.cs
FontTessellation/Poly2Tri/: Poly2Tri.csproj
LetCode/LetCode/: LetCode.sln
MarchingCube/: Marching Cube.pptx  MarchingCube.sln
MarchingCube/MarchingCube/: 128.raw  64.raw  64_1.raw  MarchingCube.vcxproj  example.cpp  test128raw.bat  test64raw.bat
MedicalDemo0/: CMakeLists.txt  MedicalDemo1.cpp
MinimalAreaTriangulation/MinimalAreaTriangulation/: MinimalAreaTriangulation.sln
MySTL/: MyDeque.hpp
PCL_Samples/: mesh.ply
PCL_Samples/ConcatenatePointClouds/: CMakeLists.txt  ConcatenatePointClouds.cpp
VTKSample/: CMakeLists.txt  VTK.docx  VTK_8.2.cmake  VTK_9.0.cmake  VTK_Config.cmake
VTKSample/HAVSVolumeMapper/: CMakeLists.txt  HAVSVolumeMapper.cxx
VTKSample/Src/: CMakeLists.txt
VTKSample/Src/CallData/: CMakeLists.txt  CallData.cpp
VTKSample/Src/Camera/: CMakeLists.txt  Camera.cpp
VTKSample/Src/CloseWindow/: CMakeLists.txt  CloseWindow.cpp
VTKSample/Src/Cube/: CMakeLists.txt  Cube.cpp
VTKSample/Src/Cylinder/: CMakeLists.txt  CylinderRenderingProperties.cpp
VTKSample/Src/DataAnimation/: CMakeLists.txt  DataAnimation.cpp
VTKSample/Src/DisplayCoordinateAxes/: CMakeLists.txt  DisplayCoordinateAxes.cpp
VTKSample/Src/DisplayPoints/: CMakeLists.txt  DisplayPoints.cpp
VTKSample/Src/DynamicRender/: CMakeLists.txt  DynamicRender.cpp  vtkTestFilter.h
VTKSample/Src/ExtractSurfaceDemo/: CMakeLists.txt  ExtractSurfaceDemo.cpp
VTKSample/Src/InteractorStyleTerrain/: CMakeLists.txt  InteractorStyleTerrain.cpp
VTKSample/Src/KeypressCallback/: CMakeLists.txt  KeypressCallback.cpp
VTKSample/Src/KeypressEvents/: CMakeLists.txt  KeypressEvents.cpp
VTKSample/Src/MarchingCases/: CMakeLists.txt  MarchingCases.cpp
VTKSample/Src/MedicalDemo1/: CMakeLists.txt  MedicalDemo1.cpp
VTKSample/Src/MedicalDemo2/: CMakeLists.txt  MedicalDemo2.cpp
VTKSample/Src/MeshSlider/: CMakeLists.txt  MeshSlider.cpp
VTKSample/Src/MinIntensityRendering/: CMakeLists.txt  MinIntensityRendering.cpp
VTKSample/Src/ObserverMemberFunction/: CMakeLists.txt  ObserverMemberFunction.cpp
VTKSample/Src/PolyDataPointNormals/: CMakeLists.txt  PolyDataPointNormals.cpp
VTKSample/Src/ReadPLY/: CMakeLists.txt  ReadPLY.cpp
VTKSample/Src/ReadPLYs/: CMakeLists.txt  ReadPLYs.cpp
VTKSample/Src/Shadows/: CMakeLists.txt  Shadows.cpp
VTKSample/Src/ShowMesh/: CMakeLists.txt  ShowMesh.cpp
VTKSample/Src/Slider/: CMakeLists.txt  Slider.cpp
VTKSample/Src/SmartVolumeMapper/: CMakeLists.txt  SmartVolumeMapper.cpp
VTKSample/Src/TestTransformPolyDataFilter/: CMakeLists.txt  TestTransformPolyDataFilter.cxx
VTKSample/Src/TextMesh/: CMakeLists.txt  TextMesh.cpp
VTKSample/Src/TransformActor/: CMakeLists.txt  TransformActor.cpp
VTKSample/Src/Triangle/: CMakeLists.txt  Triangle.cpp
VTKSample/Src/TriangleColoredPoints/: CMakeLists.txt  TriangleColoredPoints.cpp
VTKSample/Src/UserEvent/: CMakeLists.txt  UserEvent.cpp  vtkTestFilter.h
VTKSample/Src/WritePLY/: CMakeLists.txt  WritePLY.cpp
VTKSample/VolumeRendering/: CMakeLists.txt  CubicVolume.cxx
VTKSample/build-x64/texture/TextureMapImageData/: CMakeLists.txt  TextureMapImageData.cxx
VTKSample/data/: data.txt
VTKSample/texture/ReadOBJ/: CMakeLists.txt  ReadOBJ.cxx
VTKSample/texture/ReadOBJ/data/myCube/: test-obj.bat
VTKSample/texture/ShowPlyWithTexture/: CMakeLists.txt  ShowPlyWithTexture.cxx  mesh.ply
VectorAllocator/: VectorAllocator.sln
cmake_sample/build_order/: CMakeLists.txt
cmake_sample/build_order/console1/: CMakeLists.txt  main.cpp
cmake_sample/build_order/console2/: CMakeLists.txt  main.cpp
cmake_sample/build_order/dll1/: CMakeLists.txt  dll1.cpp  dll1.h
cmake_sample/build_order/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
cmake_sample/find_package/src/: CMakeLists.txt  main.cpp
cmake_sample/find_package/src/cmake/: FindOpenCV.cmake
gtest_sample_code/: CMakeLists.txt
gtest_sample_code/tests/: CMakeLists.txt  main.cpp  testcase.cpp
opencv_sample/: CMakeLists.txt  OpenCV_Config.cmake  VLD.cmake
opencv_sample/OpenCV_samples/: OpenCV_debug_x64.props  OpenCV_release_x64.props  OpenCV_samples.sln
opencv_sample/OpenCV_samples/Demo/: Demo.vcxproj  demo.cpp
opencv_sample/Src/: CMakeLists.txt
opencv_sample/Src/DisplayImage/: CMakeLists.txt  DisplayImage.cpp
opencv_sample/Src/LEDCorrection/: CMakeLists.txt  LedLightCorrection.cpp  LedLightCorrection.h  main.cpp
opencv_sample/Src/Steger/: CMakeLists.txt  Steger.cpp
opencv_sample/Src/WhiteBalance/: CMakeLists.txt  WhiteBalance.cpp
opencv_sample/Src/tutorial_feature_description/: CMakeLists.txt  tutorial_feature_description.cpp
zlibExample/: ZipExample.7z
(+161 files in other folders)
