cmake_minimum_required(VERSION 2.8)
PROJECT (Test)

#1.设置cmkae脚本所在的目录 
INCLUDE_DIRECTORIES(cmake)

#2.设置cmake模块所在的的目录
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

#3.通过cmake/FindOpenCV.cmake文件找到OpenCV模块的变量： OPENCV_INCLUDE_DIR、OPENCV_BIN_DIR、OPENCV_LIBRARIES
FIND_PACKAGE(OpenCV)

INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIR})
LINK_DIRECTORIES(${OPENCV_BIN_DIR})
ADD_EXECUTABLE(Test main.cpp)
TARGET_LINK_LIBRARIES(Test ${OPENCV_LIBRARIES})
